--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<div class="ui borderless menu">
+<div class="ui borderless topmenu menu">
   <div class="ui container">
     <a class="fitted item"><i class="facebook f icon"></i></a>
     <a class="fitted item"><i class="twitter icon"></i></a>
@@ -23,7 +23,7 @@
     <a class="fitted item"><i class="search icon"></i></i></a>
     <a class="fitted item"><i class="user icon"></i></i></a>
     <div class="ui dropdown fitted item">
-      <div class="text">MY CART <i class="search icon"></i> 0 </div>
+      <div class="text">MY CART <i class="search icon"></i> 0</div>
       <i class="dropdown icon"></i>
       <div class="menu">
         <div class="item">CART CURRENTLY EMPTY</div>
@@ -32,6 +32,63 @@
 
   </div>
 </div>
+
+<img class="ui centered image" src="https://cdn.shopify.com/s/files/1/1035/5187/files/logoshort_800x.png?v=1543956749"
+     alt="Island Snow Hawaii">
+
+<div class="ui borderless shopmenu menu">
+  <div class="ui centered grid container">
+    <div class="ui dropdown item">
+      <div class="text">MEN</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">TANK TOPS</div>
+        <div class="item">SHIRTS</div>
+        <div class="item">LONG SLEEVES</div>
+        <div class="item">SWEATSHIRTS & JACKETS</div>
+        <div class="item">ALOHA SHIRTS</div>
+        <div class="item">BOTTOMS</div>
+        <div class="item">SLIPPERS</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">WOMEN</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">TANK TOPS</div>
+        <div class="item">SHIRTS</div>
+        <div class="item">LONG SLEEVES</div>
+        <div class="item">SWEATSHIRTS & JACKETS</div>
+        <div class="item">SLIPPERS</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">KIDS</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">SHIRTS</div>
+        <div class="item">ONSIES</div>
+        <div class="item">SWEATSHIRTS</div>
+        <div class="item">ACCESSORIES</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">BRANDS</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">menu empty</div>
+      </div>
+    </div>
+
+    <a class="item">SALE</a>
+
+  </div>
+</div>
+
+<img class="ui fluid image" src="http://courses.ics.hawaii.edu/ics314s21/morea/ui-frameworks/experience-islandsnow-video-snapshot.png">
 
 <script>
   $('.ui.dropdown')
