finished WOD3 for E35

--- a/index.html
+++ b/index.html
@@ -79,7 +79,21 @@
       <div class="text">BRANDS</div>
       <i class="dropdown icon"></i>
       <div class="menu">
-        <div class="item">menu empty</div>
+        <div class="item">HAWAII DOMESTIC MARKET</div>
+        <div class="item">HERSHEL SUPPLY</div>
+        <div class="item">IN4MATION</div>
+        <div class="item">ISLAND SNOW HAWAII</div>
+        <div class="item">KAILUA BOYS</div>
+        <div class="item">KAILUA GIRLS</div>
+        <div class="item">LANIKAI CANOE CLUB</div>
+        <div class="item">MOKULUA HULA</div>
+        <div class="item">PATAGONIA</div>
+        <div class="item">RVCA HAWAII</div>
+        <div class="item">SLICK</div>
+        <div class="item">SLOWTIDE</div>
+        <div class="item">STUSSY</div>
+        <div class="item">TORI RICHARD</div>
+        <div class="item">VOLCAM HAWAII</div>
       </div>
     </div>
 
@@ -89,6 +103,41 @@
 </div>
 
 <img class="ui fluid image" src="http://courses.ics.hawaii.edu/ics314s21/morea/ui-frameworks/experience-islandsnow-video-snapshot.png">
+
+<div class="footer-background">
+ <div class="ui three column grid container">
+   <div class="column">
+    <div class="ui list">
+      <div class="item">About us</div>
+      <div class="item">Store Locations</div>
+      <div class="item">Employment</div>
+      <div class="item">Videos</div>
+      <div class="item">Shipping & Returns</div>
+      <div class="item">Terms & Conditions</div>
+      <div class="item">Privacy Policy</div>
+    </div>
+   </div>
+
+   <div class="column">
+     <div class="item">Men</div>
+     <div class="item">Women</div>
+     <div class="item">Kids</div>
+     <div class="item">Brands</div>
+     <div class="item">Sale</div>
+   </div>
+
+   <div class="column">
+     <br>Join our mailing list for updates
+     <br>Sign to receive our email updates!
+     <div class="ui labeled input">
+       <input type="text" placeholder="Enter email address">
+       <div class="ui black label">
+         Join
+       </div>
+     </div>
+   </div>
+ </div>
+</div>
 
 <script>
   $('.ui.dropdown')
